# Analysis-of-Algorithms

Project 1/cuaderno-ejemplo/: Cuaderno de Ejemplo.ipynb  algoritmos.py
Project 1/cuadernos-Proyecto/: Pregunta 2 - Ale.ipynb
Project 2/: README.md  dominio.py  requirements.txt
Proyecto 1/: README.md  requirements.txt
Proyecto 1/cuadernos-Proyecto/: Pregunta 1 - Jonathan.ipynb  Pregunta 3 - Luis.ipynb  Pregunta 4 - Vale.ipynb  generador_listas.py  implementación_algoritmos.py
Proyecto 1/investigación-ejemplo/: Búsqueda Lineal.ipynb  Prueba de concepto.ipynb
Proyecto 2/: algoritmo_genetico.py  algoritmo_genetico_test.py  csv_reader.py  dominio_tsp.py  dominio_tsp_test.py  investigación.ipynb
Proyecto 2/datos/: ciudades_cr_pruebas.csv
Tarea 1/: requirements.txt
Tarea 2/: euler.py  euler_test.py  pyproject.toml
Tarea 3/: README.md  sumatoria_test.py
Tarea 4/: README.md  burbuja.py  burbuja_test.py
Tarea 5/: requirements.txt  rutas_test.py
Tarea 6/: rutas.py  rutas_test.py
Tarea 7/: README.md  almacenamiento_test.py
Task 1/: README.md  es_primo.py  es_primo_test.py
Task 2/: README.md  test.sh
Task 3/: sumatoria.py
Task 5/: README.md  rutas.py
Task 6/: README.md
Task 7/: almacenamiento.py
