[tool.poetry]
name = "ic-3002-2021i-tc1-nuwidra"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
big-o = "^0.10.1"
gnuplotlib = "^0.37"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
